--- a/style.css
+++ b/style.css
@@ -32,18 +32,20 @@ body {
 }
 
 .menu_item {
+    /*letter-spacing:5px;*/
     color: #ffffff;
     font-size: 18px;
     margin-left: 60px;
     font-weight: 500;
-    font-family: "Helvetica Neue", serif;
+    font-family: Helvetica_Neue_medium,serif;
 }
 
 .menu_item_1 {
+    /*letter-spacing:5px;*/
     color: #999999;
     font-size: 18px;
     font-weight: 500;
-    font-family: "Helvetica Neue", serif;
+    font-family: Helvetica_Neue_medium,serif;
 }
 
 /*NEW CODE*/
@@ -107,8 +109,8 @@ footer{
 
 p{
     font-size: 1.875em;
-    font-family: "Helvetica Neue", serif;
-    font-weight: 500;
+    font-family: Helvetica_Neue_medium,serif;
+    font-weight: 600;
     margin: 0;
 }
 
@@ -130,8 +132,7 @@ p{
 
 .stroke_price{
     font-size: 21px;
-    font-family: "Helvetica Neue",serif;
-
+    font-family: Helvetica_Neue_medium,serif;
     margin-top:24px;
     margin-bottom:24px;
 }
