--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 }
 
 .menu_item {
-    /*letter-spacing:5px;*/
+    letter-spacing:1px;
     color: #ffffff;
     font-size: 18px;
     margin-left: 60px;
@@ -41,7 +41,7 @@ body {
 }
 
 .menu_item_1 {
-    /*letter-spacing:5px;*/
+    letter-spacing:1px;
     color: #999999;
     font-size: 18px;
     font-weight: 500;
