--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     height: 50px;
     width: 100%;
     display: flex;
-
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.10);
     /*    justify-content: center;*/
     align-items: center;
 }
