--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 .header {
     background-image: linear-gradient(180deg, #1E1E1E 0%, #333333 98%);
     height: 50px;
-    width: 100%;
+    width: 100vw;
     display: flex;
 
     /*    justify-content: center;*/
@@ -77,7 +77,7 @@ body {
 
 
 .box {
-    padding: 40px;
+    padding: 60px;
     height: 398px;
     background-color: #fafafa;
     border: 1px solid #CCCCCC;
