--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    box-sizing: border-box;
+    /*box-sizing: border-box;*/
     background-color: #F7F7F7;
 }
 
@@ -93,10 +93,14 @@ body {
 }
 
 .grid {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1420px;
     display: grid;
     grid-column-gap: 20px;
     grid-row-gap: 20px;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(700px, 1fr));
+    /*grid-template-columns: max-content 1fr 1fr;*/
 
 }
 
