--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    /*box-sizing: border-box;*/
+    box-sizing: border-box;
     background-color: #F7F7F7;
 }
 
@@ -52,7 +52,7 @@ body {
 
 .box1 {
     grid-column-start: 1;
-    grid-column-end: 4;
+    grid-column-end: 3;
 }
 
 .box2 {
@@ -62,7 +62,7 @@ body {
 
 .box3 {
     grid-column-start: 2;
-    grid-column-end: 4;
+    grid-column-end: 3;
 }
 
 .box4 {
@@ -72,7 +72,7 @@ body {
 
 .box5 {
     grid-column-start: 2;
-    grid-column-end: 4;
+    grid-column-end: 3;
 }
 
 
@@ -99,7 +99,7 @@ body {
     display: grid;
     grid-column-gap: 20px;
     grid-row-gap: 20px;
-    grid-template-columns: repeat(auto-fill, minmax(700px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
     /*grid-template-columns: max-content 1fr 1fr;*/
 
 }
